--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
+    "nanoid": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
@@ -20,6 +21,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.11",
+    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
