--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,7 +1,29 @@
 {
   "tables" : [
-    { "id" : 1},
-    { "id" : 2},
-    { "id" : 3}
+    { "id": 1,
+      "status": "Free",
+      "peopleAmount": "2",
+      "maxPeopleAmount": "4",
+      "bill": "0"
+    },
+    { "id": 2,
+      "status": "Free",
+      "peopleAmount": "1",
+      "maxPeopleAmount": "4",
+      "bill": "0"
+    },
+    { "id": 3,
+      "status": "Free",
+      "peopleAmount": "1",
+      "maxPeopleAmount": "4",
+      "bill": "0"
+    },
+    {
+      "id": 4,
+      "status": "Free",
+      "peopleAmount": "1",
+      "maxPeopleAmount": "4",
+      "bill": "0"
+    }
   ]
 }
