--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,29 +1,32 @@
 {
-  "tables" : [
-    { "id": 1,
-      "status": "Free",
+  "tables": [
+    {
+      "id": 1,
+      "status": "Busy",
       "peopleAmount": "2",
       "maxPeopleAmount": "4",
+      "bill": "20"
+    },
+    {
+      "id": 2,
+      "status": "Free",
+      "peopleAmount": "0",
+      "maxPeopleAmount": "3",
       "bill": "0"
     },
-    { "id": 2,
-      "status": "Free",
-      "peopleAmount": "1",
-      "maxPeopleAmount": "4",
-      "bill": "0"
-    },
-    { "id": 3,
-      "status": "Free",
-      "peopleAmount": "1",
+    {
+      "id": 3,
+      "status": "Cleaning",
+      "peopleAmount": "0",
       "maxPeopleAmount": "4",
       "bill": "0"
     },
     {
       "id": 4,
-      "status": "Free",
+      "status": "Busy",
       "peopleAmount": "1",
       "maxPeopleAmount": "4",
-      "bill": "0"
+      "bill": "45"
     }
   ]
 }
