--- a/public/db/app.json
+++ b/public/db/app.json
@@ -3,13 +3,13 @@
     {
       "id": 1,
       "status": "Busy",
-      "peopleAmount": "3",
-      "maxPeopleAmount": "5",
-      "bill": "2"
+      "peopleAmount": "2",
+      "maxPeopleAmount": "4",
+      "bill": "20"
     },
     {
       "id": 2,
-      "status": "Busy",
+      "status": "Free",
       "peopleAmount": "0",
       "maxPeopleAmount": "3",
       "bill": "0"
