--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "waiter-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@testing-library/jest-dom": "^5.16.3",
