--- a/public/db/app.json
+++ b/public/db/app.json
@@ -3,9 +3,9 @@
     {
       "id": 1,
       "status": "Busy",
-      "peopleAmount": "2",
-      "maxPeopleAmount": "4",
-      "bill": "10"
+      "peopleAmount": 2,
+      "maxPeopleAmount": 4,
+      "bill": "50"
     },
     {
       "id": 2,
